Closed Bug 1669434 Opened 4 years ago Closed 4 years ago

The Title of the Media played is not displayed correctly on soundcloud.com

Categories

(Core :: Audio/Video: Playback, defect, P3)

Desktop
Windows 10
defect

Tracking

()

VERIFIED FIXED
84 Branch
Tracking Status
firefox81 --- disabled
firefox82 --- wontfix
firefox83 --- verified
firefox84 --- verified

People

(Reporter: rdoghi, Assigned: alwu)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

[Affected versions]
Firefox 82.0b7

[Affected platforms]
Windows 10, Ubuntu

[Steps to reproduce]

  1. Open the Firefox browser with a new profile and reach soundcloud.com
  2. Perform a Search with "Eminem" and play the first song.
  3. Pause/Play using the media key in order to see the Virtual Control interface.
  4. Skip Next using the media control key from the keyboard or clicking the skip Next button from the Virtual control interface.

[Expected result]
The correct title of the song should be displayed in the virtual control interface when the user skips songs on soundcloud.com

[Actual result]
Only the first song title is displayed in the Virtual Control interface after the user skips a song.

I think the severity for this issue should be an S3 since it only happens on Soundcloud and only when you skip to the next song using the media control key or the virtual control interface.

Reproducible on Firefox 82.0b7 on Ubunto 18.04

This is Soundcloud's issue, they didn't change the metadata when we switch to the next song. Therefore, we would keep using the default metadata, which is the title from the first page where sound is playing.

They use MediaSession API, but only set the action handlers for media keys and playback state. I will report this issue to them and ask them why they didn't update the metadata via MediaSession API as well.

I've reported this issue to them via our contact window. Although this issue can also be fixed on our side, we can adjust default metadata when ever the website title changes. However, asking website to set their own metadata is still a better way to do so. I would make this as P3 and implement that when we have time.

Severity: -- → S3
Priority: -- → P3
Assignee: nobody → alwu
Pushed by alwu@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/3d884cf8885c part1 : update default metadata if needed when page title changes. r=chunmin,nika https://hg.mozilla.org/integration/autoland/rev/794802a37466 part2 : add a test case for updating default metadata when page title changes. r=chunmin
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 84 Branch

What's the status of this issue on Beta/Release? Is this feature disabled there?

Flags: needinfo?(alwu)

This feature is already on by default on Fx82 Release, and I will ask for an uplift to fix this in Fx83 Beta as well. Thank for a remind.

Flags: needinfo?(alwu)

Comment on attachment 9181824 [details]
Bug 1669434 - part1 : update default metadata if needed when page title changes.

Beta/Release Uplift Approval Request

  • User impact if declined: The wrong media title would be shown on the virtual control interface, when users are playing music on Soundcloud. (and probably on other websites as well)
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce: See comment0.
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): These patches didn't introduce any new feature or change the architecture, we would simply update the media controller interface again if a controlled page changes its title. Also come with an automation test.
  • String changes made/needed: No
Attachment #9181824 - Flags: approval-mozilla-beta?
Attachment #9181825 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

This issue is Verified as fixed in our latest Nightly build 84.0a1 (2020-10-26) on Windows 10 and Ubuntu 20.04.

Comment on attachment 9181824 [details]
Bug 1669434 - part1 : update default metadata if needed when page title changes.

Has tests and was verified on Nightly by our QA, this was set as P3/S3 when the feature was still disabled and it only affected Soundcloud, but this is now enabled on the release channel and probably affects other sites so let's take it in the next 83 beta 5, thanks.

Attachment #9181824 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9181825 - Flags: approval-mozilla-beta? → approval-mozilla-beta+

This issue is Verified as fixed in Beta 83.0b5 on Ubuntu 20.04 and Windows 10.

Status: RESOLVED → VERIFIED
QA Whiteboard: [qa-triaged]
Flags: qe-verify+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: