Bug 1669434 - part1 : update default metadata if needed when page title changes. r=chunmin,nika

When a page doesn't have a non-empty media session metadata, we would use its title as a default metadata, which would display as an artist name on the virtual control interface.

Therefore, when a page changes its title, we should also notify media controller (if it's been created) in order to update the default metadata as well.

Differential Revision: https://phabricator.services.mozilla.com/D93670